Tests/Runtime2/Error/Props/.build/inspecterror.pr
[
  {
    "name": "InspectError",
    "description": "Build goal steps for InspectError.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %errorMessage% = %!error.Message%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%errorMessage%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.Message%",
                "type": "object"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      },
      {
        "index": 1,
        "text": "set %errorKey% = %!error.Key%",
        "lineNumber": 3,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%errorKey%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.Key%",
                "type": "object"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      },
      {
        "index": 2,
        "text": "set %errorStatusCode% = %!error.StatusCode%",
        "lineNumber": 4,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%errorStatusCode%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.StatusCode%",
                "type": "object"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/InspectError.goal",
    "prPath": "/.build/inspecterror.pr",
    "hash": "a04c978e2dcf88fd3ad7c3ff05b8361a9e019e3440c9bbfcef137a4260d21a14",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]